Fixed hazelcast issues by reverting back to stable